scripts/config/ontotools-curation-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ontostring
  namespace: ontotools
  labels:
    version: latest
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ontostring
    spec:
      containers:
      - name: ontostring
        image: "ebispot/ontostring:latest-sandbox"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - mountPath: "/var/log/ontotools"
          name: log
      volumes:
      - name: log
        persistentVolumeClaim:
           claimName: ontostring-logs
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: ontostring
    version: latest
  name: ontostring
  namespace: ontotools
spec:
  type: NodePort
  ports:
  - name: "application"
    port: 8080
  selector:
    app: ontostring
