scripts/config/ontotools-curation-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ontotools-curation-ingress
  namespace: ontotools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "30m"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /ontotools/curation/api(/|$)(.*)
        backend:
          serviceName: ontotools-curation-service
          servicePort: 8080
